--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,44 +1,49 @@
 name: Flutter CI
 
-on: [push]
+# This workflow is triggered on pushes to the repository.
 
+# on:
+#   push:
+#     branches:
+#     - master
+    
+on: push    # Default will running for every branch.
+    
 jobs:
   build:
-    name: Build APK and App Bundle
+    # This job will run on ubuntu virtual machine
     runs-on: ubuntu-latest
-
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v2
-
-    - name: Set up JDK 11
-      uses: actions/setup-java@v2
+    
+    # Setup Java environment in order to build the Android app.
+    - uses: actions/checkout@v1
+    - uses: actions/setup-java@v1
       with:
-        distribution: 'zulu'
-        java-version: '11'
-
-    - name: Install Flutter
-      uses: subosito/flutter-action@v2
+        java-version: '12.x'
+    
+    # Setup the flutter environment.
+    - uses: subosito/flutter-action@v1
       with:
-        flutter-version: 'latest' # or specify the version you are using, e.g., '3.7.0'
-
-    - name: Flutter pub get
-      run: flutter pub get
-
-    - name: Build APK
-      run: flutter build apk --release
-
-    - name: Build App Bundle
-      run: flutter build appbundle --release
-
-    - name: Upload APK
-      uses: actions/upload-artifact@v2
+        channel: 'beta' # 'dev', 'alpha', default to: 'stable'
+        # flutter-version: '1.12.x' # you can also specify exact version of flutter
+    
+    # Get flutter dependencies.
+    - run: flutter pub get
+    
+    # Check for any formatting issues in the code.
+    - run: flutter format --set-exit-if-changed .
+    
+    # Statically analyze the Dart code for any errors.
+    - run: flutter analyze .
+    
+    # Run widget tests for our flutter project.
+    - run: flutter test
+    
+    # Build apk.
+    - run: flutter build apk
+    
+    # Upload generated apk to the artifacts.
+    - uses: actions/upload-artifact@v1
       with:
-        name: app-release.apk
-        path: build/app/outputs/flutter-apk/app-release.apk
-
-    - name: Upload App Bundle
-      uses: actions/upload-artifact@v2
-      with:
-        name: app-release.aab
-        path: build/app/outputs/bundle/release/app-release.aab
+        name: release-apk
+        path: build/app/outputs/apk/release/app-release.apk
