--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,10 +31,7 @@ jobs:
     - run: flutter pub get
     
     # Statically analyze the Dart code for any errors.
-    - run: flutter analyze .
-    
-    # Run widget tests for our flutter project.
-    - run: flutter test
+    - run: flutter analyze
     
     # Build apk.
     - run: flutter build apk
@@ -44,3 +41,12 @@ jobs:
       with:
         name: release-apk
         path: build/app/outputs/apk/release/app-release.apk
+        
+    # Build app bundle.
+    - run: flutter build appbundle
+
+    # Upload generated apk to the artifacts.
+    - uses: actions/upload-artifact@v1
+      with:
+        name: release-appbundle
+        path: build/app/outputs/appbundle/release/app-release.aab
